--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,57 @@
   display: inline;
   padding: 20px;
 }
+
+.form-element{
+  padding: 10px;
+}
+
+.Form > button{
+  color: white;
+  background-color: rgba(65, 65, 209, 0.562);
+  border-style: none;
+}
+
+.Form > button:hover{
+  background-color: rgba(77, 209, 65, 0.562);
+}
+
+.Form > input {
+  border-style:none;
+  border-bottom: black solid 1px;
+}
+
+.center{
+  display: flex;
+  justify-content: center;
+}
+/* 
+.imageContainer{
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  
+}
+
+.ImageView{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 500px;
+}
+
+.imageContainer{
+  margin-top: 20px;
+}
+.imageContainer > img{
+  width: 100%;
+  height: auto; 
+} */
+
+.imageContainer{
+  position: absolute;
+  margin-top: 30px;
+}
+
+
